tests/errors/extraneous_return_type.ceos
extern foo(Int) -> Void

foo(1) -> Int
